<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:orderInCategory="101"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="101"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:orderInCategory="102"
        android:title="@string/create_account"
        app:showAsAction="never" />
    <item
        android:orderInCategory="103"
        android:title="@string/action_help" />
    <item
        android:orderInCategory="102"
        android:title="@string/login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="104"
        android:title="@string/action_logout" />
</menu>
