<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borderchage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <AutoCompleteTextView
            android:id="@+id/itemName"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_item"
            android:inputType="textAutoComplete|textPersonName"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/itemquanity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/item_quanity"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Category"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addgroitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:elevation="11dp"
            android:fontFamily="casual"
            android:lineSpacingExtra="60sp"
            android:text="@string/addgroceryitem"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:targetApi="lollipop" />
    </LinearLayout>

</ScrollView>